--- a/SFMLproject/SFMLproject.vcxproj
+++ b/SFMLproject/SFMLproject.vcxproj
@@ -77,6 +77,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.5.1\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -92,6 +93,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.5.1\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -109,6 +111,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.5.1\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,6 +131,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)SFML-2.5.1\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,6 +145,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="animationBearingBall.h" />
     <ClInclude Include="buttonFabric.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="classSaver.h" />
@@ -149,6 +154,8 @@
     <ClInclude Include="engine.h" />
     <ClInclude Include="event.h" />
     <ClInclude Include="floorDrawer.h" />
+    <ClInclude Include="GameExceptions.h" />
+    <ClInclude Include="gameScene.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="level.h" />
     <ClInclude Include="levelDrawer.h" />
@@ -157,6 +164,7 @@
     <ClInclude Include="movable.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="pictureObject.h" />
+    <ClInclude Include="resourceFileNaming.h" />
     <ClInclude Include="scene.h" />
     <ClInclude Include="textObject.h" />
     <ClInclude Include="vector2.h" />
