--- a/SFMLproject/SFMLproject.vcxproj
+++ b/SFMLproject/SFMLproject.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="animationBearingBall.h" />
+    <ClInclude Include="animator.h" />
     <ClInclude Include="buttonFabric.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="classSaver.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="creatureLevelBoxing.h" />
     <ClInclude Include="damagable.h" />
     <ClInclude Include="enemy.h" />
+    <ClInclude Include="enemyMover.h" />
     <ClInclude Include="engine.h" />
     <ClInclude Include="event.h" />
     <ClInclude Include="floorDrawer.h" />
@@ -161,6 +163,7 @@
     <ClInclude Include="gameScene.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="level.h" />
+    <ClInclude Include="LevelBitmap.h" />
     <ClInclude Include="levelDrawer.h" />
     <ClInclude Include="levelEditor.h" />
     <ClInclude Include="mainMenuScene.h" />
@@ -171,6 +174,7 @@
     <ClInclude Include="scene.h" />
     <ClInclude Include="textObject.h" />
     <ClInclude Include="textureCollector.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="vector2.h" />
     <ClInclude Include="wall.h" />
   </ItemGroup>
