--- a/SFMLproject/SFMLproject.vcxproj
+++ b/SFMLproject/SFMLproject.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="textureCollector.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="vector2.h" />
+    <ClInclude Include="VectorInt.h" />
     <ClInclude Include="wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
