--- a/SFMLproject/SFMLproject.vcxproj
+++ b/SFMLproject/SFMLproject.vcxproj
@@ -147,6 +147,8 @@
   <ItemGroup>
     <ClInclude Include="animationBearingBall.h" />
     <ClInclude Include="animator.h" />
+    <ClInclude Include="bulletDrawer.h" />
+    <ClInclude Include="bulletEnemyHitter.h" />
     <ClInclude Include="buttonFabric.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="classSaver.h" />
@@ -161,6 +163,8 @@
     <ClInclude Include="floorDrawer.h" />
     <ClInclude Include="GameExceptions.h" />
     <ClInclude Include="gameScene.h" />
+    <ClInclude Include="bullet.h" />
+    <ClInclude Include="gun.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="level.h" />
     <ClInclude Include="LevelBitmap.h" />
@@ -169,6 +173,7 @@
     <ClInclude Include="mainMenuScene.h" />
     <ClInclude Include="movable.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="objectCollider.h" />
     <ClInclude Include="pictureObject.h" />
     <ClInclude Include="resourceFileNaming.h" />
     <ClInclude Include="scene.h" />
