--- a/SFMLproject/SFMLproject.vcxproj.filters
+++ b/SFMLproject/SFMLproject.vcxproj.filters
@@ -62,6 +62,9 @@
     <Filter Include="Enemy">
       <UniqueIdentifier>{f15a4d08-2658-43ba-b0a6-391eba621c29}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Gun">
+      <UniqueIdentifier>{11b2c532-f700-4084-a32c-8084534339cb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -167,6 +170,21 @@
     </ClInclude>
     <ClInclude Include="VectorInt.h">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="bullet.h">
+      <Filter>Gun</Filter>
+    </ClInclude>
+    <ClInclude Include="gun.h">
+      <Filter>Gun</Filter>
+    </ClInclude>
+    <ClInclude Include="objectCollider.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="bulletDrawer.h">
+      <Filter>Gun</Filter>
+    </ClInclude>
+    <ClInclude Include="bulletEnemyHitter.h">
+      <Filter>Gun</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
