--- a/SFMLproject/SFMLproject.vcxproj.filters
+++ b/SFMLproject/SFMLproject.vcxproj.filters
@@ -44,9 +44,6 @@
     <Filter Include="ResourceFilesContainer">
       <UniqueIdentifier>{81e7bbb7-00ff-4a2e-a05b-6c400c5a6a4c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Exceptions">
-      <UniqueIdentifier>{d462aa4c-c56e-4342-8ded-966f0897f4c4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Creature">
       <UniqueIdentifier>{35108922-b22c-40fd-8f54-902a734d26d9}</UniqueIdentifier>
     </Filter>
@@ -69,6 +66,60 @@
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Main</Filter>
+    </ClCompile>
+    <ClCompile Include="animator.cpp">
+      <Filter>Animator</Filter>
+    </ClCompile>
+    <ClCompile Include="buttonFabric.cpp">
+      <Filter>ButtonFabric</Filter>
+    </ClCompile>
+    <ClCompile Include="camera.cpp">
+      <Filter>Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>Timer</Filter>
+    </ClCompile>
+    <ClCompile Include="textureCollector.cpp">
+      <Filter>TextureCollector</Filter>
+    </ClCompile>
+    <ClCompile Include="classSaver.cpp">
+      <Filter>Saver</Filter>
+    </ClCompile>
+    <ClCompile Include="object.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="textObject.cpp">
+      <Filter>Object\Types</Filter>
+    </ClCompile>
+    <ClCompile Include="pictureObject.cpp">
+      <Filter>Object\Types</Filter>
+    </ClCompile>
+    <ClCompile Include="vector2.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="objectCollider.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="wall.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="movable.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="levelDrawer.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="levelBitmap.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="level.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="damagable.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="engine.cpp">
+      <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -135,9 +186,6 @@
     <ClInclude Include="resourceFileNaming.h">
       <Filter>ResourceFilesContainer</Filter>
     </ClInclude>
-    <ClInclude Include="GameExceptions.h">
-      <Filter>Exceptions</Filter>
-    </ClInclude>
     <ClInclude Include="gameScene.h">
       <Filter>Scenes\Types</Filter>
     </ClInclude>
@@ -165,9 +213,6 @@
     <ClInclude Include="enemyMover.h">
       <Filter>Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="LevelBitmap.h">
-      <Filter>Level</Filter>
-    </ClInclude>
     <ClInclude Include="VectorInt.h">
       <Filter>Math</Filter>
     </ClInclude>
@@ -185,6 +230,9 @@
     </ClInclude>
     <ClInclude Include="bulletEnemyHitter.h">
       <Filter>Gun</Filter>
+    </ClInclude>
+    <ClInclude Include="levelBitmap.h">
+      <Filter>Level</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
